fixed overlapping issue

--- a/src/App.css
+++ b/src/App.css
@@ -4,16 +4,16 @@
   display: grid;
   grid-template-columns: auto auto auto auto;
   justify-items: center;
-  align-content: space-around;
+  align-content: center;
 }
 
 .cal-header,
 .keys,
 .bottom-zero {
-  padding: 10px 0;
+  padding: 0 5px 0 0;
   margin: 0;
   width: 100%;
-  height: 100%;
+  height: 50px;
   border: 1px solid gray;
 }
 
@@ -23,7 +23,7 @@
   background-color: gray;
   display: grid;
   justify-content: end;
-  align-items: start;
+  align-items: center;
 }
 
 .keys {
